# aws-inventory

./: pyproject.toml
res/: analytics.py  compute.py  container.py  db.py  glob.py  integration.py  network.py  storage.py  utils.py
